--- a/photoshare/photoshare/MailMessageTable.xib
+++ b/photoshare/photoshare/MailMessageTable.xib
@@ -6,6 +6,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MailMessageTable">
             <connections>
+                <outlet property="searchDisplayController" destination="ZAV-E5-o1d" id="Qjw-VX-HGD"/>
+                <outlet property="select_deseletBtn" destination="7gW-a1-0yE" id="XIH-4L-kmt"/>
                 <outlet property="table" destination="fHa-fh-gsc" id="5oD-7c-dp3"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
@@ -16,7 +18,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="fHa-fh-gsc">
-                    <rect key="frame" x="0.0" y="145" width="320" height="423"/>
+                    <rect key="frame" x="0.0" y="187" width="320" height="381"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
@@ -25,7 +27,7 @@
                     </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7gW-a1-0yE">
-                    <rect key="frame" x="100" y="110" width="112" height="27"/>
+                    <rect key="frame" x="0.0" y="144" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.12599232769999999" green="0.38773500519999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="Select All">
@@ -37,13 +39,30 @@
                     </connections>
                 </button>
                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="1" id="far-2X-78a">
-                    <rect key="frame" x="0.0" y="144" width="320" height="2"/>
+                    <rect key="frame" x="0.0" y="186" width="320" height="2"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </progressView>
+                <searchBar contentMode="redraw" id="p55-ed-OCS">
+                    <rect key="frame" x="0.0" y="100" width="320" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="p5y-6y-DBH"/>
+                    </connections>
+                </searchBar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
+        <searchDisplayController id="ZAV-E5-o1d">
+            <connections>
+                <outlet property="delegate" destination="-1" id="7ga-Bt-YRd"/>
+                <outlet property="searchBar" destination="p55-ed-OCS" id="8jQ-Tc-35n"/>
+                <outlet property="searchContentsController" destination="-1" id="9Fu-XA-S1L"/>
+                <outlet property="searchResultsDataSource" destination="-1" id="gJh-FO-QvZ"/>
+                <outlet property="searchResultsDelegate" destination="-1" id="nbV-ii-Aky"/>
+            </connections>
+        </searchDisplayController>
     </objects>
 </document>
