--- a/photoshare/photoshare/SearchPhotoViewController.xib
+++ b/photoshare/photoshare/SearchPhotoViewController.xib
@@ -25,11 +25,11 @@
                     </connections>
                 </searchBar>
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" id="UJ7-45-uOz">
-                    <rect key="frame" x="0.0" y="153" width="320" height="232"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="5YJ-To-Z3C">
-                        <size key="itemSize" width="73" height="70"/>
+                    <rect key="frame" x="0.0" y="153" width="320" height="270"/>
+                    <autoresizingMask key="autoresizingMask" heightSizable="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="5" id="5YJ-To-Z3C">
+                        <size key="itemSize" width="73" height="100"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
