--- a/photoshare/photoshare/SearchPhotoViewController.xib
+++ b/photoshare/photoshare/SearchPhotoViewController.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <searchBar contentMode="redraw" id="BTd-pd-yf1">
+                <searchBar contentMode="redraw" placeholder="Search" id="BTd-pd-yf1">
                     <rect key="frame" x="0.0" y="109" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <textInputTraits key="textInputTraits"/>
@@ -28,11 +28,11 @@
                     <rect key="frame" x="0.0" y="153" width="320" height="270"/>
                     <autoresizingMask key="autoresizingMask" heightSizable="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="5" id="5YJ-To-Z3C">
-                        <size key="itemSize" width="73" height="100"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="10" id="5YJ-To-Z3C">
+                        <size key="itemSize" width="92" height="100"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
+                        <inset key="sectionInset" minX="10" minY="5" maxX="10" maxY="5"/>
                     </collectionViewFlowLayout>
                     <cells/>
                     <connections>
